--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -50,4 +51,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     kapt 'com.github.bumptech.glide:compiler:4.14.2'
 
+
+    //Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:30.5.0')
+    //Analytics
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    //Storage
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    //Realtime Database
+    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
+    //Auth
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
 }
